# alt-fast

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  supervisord.conf
backend/: pyproject.toml  requirements.txt  shell.py
backend/alembic/: env.py
backend/alembic/versions/: 0b2cdcfca762_add_profit_loss_net_and_profit_rate_net_.py  237217dabbbb_volume_column_to_bigint.py  315f814d5e29_update_decision_and_order_history_fields.py  3385e5c2ee77_initial_models.py  4eb5eec722cd_add_buy_order_id_to_order_histories.py  a1b2c3d4e5f6_add_is_processed_to_dart_disclosures.py  b1c2d3e4f5a6_add_news_clusters_table.py  bc5cbf66d29a_add_orderbook_snapshots_table.py  c1d2e3f4a5b6_add_trading_events_table.py  d1e2f3a4b5c6_add_event_and_sizing_cols_to_orders.py  d214602eb60b_sync_models_with_django_originals.py  e1f2a3b4c5d6_add_strategy_id_to_system_parameters.py  e799cf699546_add_strategies_table_and_strategy_id_fk.py  f1a2b3c4d5e6_add_macro_snapshots_table.py
backend/app/: cli.py  config.py  logging_config.py  main.py
backend/app/api/: auth.py  chart.py  chatbot.py  dashboard.py  deploy.py  deps.py  event_trader.py  macro.py  news.py  report.py  router.py  settings.py  strategies.py  trades.py
backend/app/models/: __init__.py  asset.py  dart_disclosure.py  news.py  (+13 more)
backend/tests/: conftest.py  test_backfill.py  test_circuit_breaker.py  test_dart_collector.py  test_dashboard.py  test_event_decision.py  test_event_detector.py  test_event_liquidator.py  test_event_performance.py  test_event_trader.py  test_macro_collector.py  test_news.py  test_news_clustering.py  test_position_sizer.py  test_quant_filter.py  test_trades.py
(+142 files in other folders)
